--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_install:
   - sudo apt-get install -y nasm
 script:
   - nasm -f elf boot.asm -o boot.o
-  - g++ -c main.cc -o kernel.o -ffreestanding -fno-exceptions -fno-rtti
+  - g++ -std=c++11 -c main.cc -o kernel.o -ffreestanding -fno-exceptions -fno-rtti
   - gcc boot.o kernel.o -T linker.ld -o image/kern
 after_sucess:
   - grub-mkrescue image --output=kern.iso
