--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: c++
 before_install:
+  - uname -a
   - sudo apt-get -qq update
   - sudo apt-get install -y nasm
 script:
-  - nasm -f elf boot.asm -o boot.o
+  - nasm -f elf64 boot.asm -o boot.o
   - g++ -std=c++11 -c main.cc -o kernel.o -ffreestanding -fno-exceptions -fno-rtti
   - gcc boot.o kernel.o -T linker.ld -o image/kern
 after_sucess:
